--- a/app/src/main/res/layout/fragment_strength_day_three.xml
+++ b/app/src/main/res/layout/fragment_strength_day_three.xml
@@ -31,7 +31,7 @@
             android:scaleType="fitXY"
             android:layout_width="wrap_content"
             android:layout_height="200dp"
-            android:id="@+id/closeGripBenchImage"
+            android:id="@+id/deadliftImage"
             android:src="@drawable/deadlift"
             android:layout_below="@+id/squat"
             android:clickable="true"
@@ -51,7 +51,7 @@
             android:scaleType="fitXY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/legpresspic"
+            android:id="@+id/rowImage"
             android:src="@drawable/dbrow"
             android:layout_below="@+id/dbrow"
             android:clickable="true"
