--- a/app/src/main/res/layout/fragment_stopwatch_main.xml
+++ b/app/src/main/res/layout/fragment_stopwatch_main.xml
@@ -12,17 +12,19 @@
         android:layout_width="100dp"
         android:layout_marginLeft="38dp"
         android:text="@string/start"
-        android:layout_below="@+id/chronometer"
-        android:layout_alignParentStart="true" />
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/reset"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/stop"
         android:layout_height="45dp"
         android:layout_width="100dp"
         android:clickable="true"
-        android:layout_marginTop="200dp"
         android:layout_marginLeft="270dp"
-        android:text="@string/stop" />
+        android:text="@string/stopz"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/start" />
 
     <Button
         android:id="@+id/reset"
@@ -31,7 +33,8 @@
         android:clickable="true"
         android:layout_marginLeft="150dp"
         android:text="@string/reset"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 
 
