--- a/app/src/main/res/layout/fragment_body_building_day_three.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_three.xml
@@ -15,6 +15,7 @@
         android:layout_width="fill_parent"
         android:orientation="vertical"
         android:weightSum="1">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -24,6 +25,7 @@
             android:layout_gravity="center_horizontal|top"
             android:textColor="#ffffff"
             android:layout_above="@+id/hammercurlText"/>
+
         <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
@@ -35,14 +37,6 @@
         android:textColor="#ffffff"
         android:textSize="25dp" />
 
-        <TextView
-            android:layout_width="234dp"
-            android:layout_height="34dp"
-            android:layout_marginLeft="35dp"
-            android:text="4 Sets of 10-12 Repetitions "
-            android:id="@+id/hammerCurlDetail"
-            android:layout_gravity="center_horizontal"
-            android:textColor="#ffffff" />
 
         <ImageButton
             android:scaleType="fitXY"
@@ -57,6 +51,16 @@
             android:layout_above="@+id/hammerCurlDetail"
             android:layout_weight="0.03" />
 
+        <TextView
+            android:layout_width="234dp"
+            android:layout_height="34dp"
+            android:layout_marginLeft="35dp"
+            android:text="4 Sets of 10-12 Repetitions "
+            android:id="@+id/hammerCurlDetail"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#ffffff" />
+
+
 
         <TextView
         android:layout_width="219dp"
@@ -64,25 +68,15 @@
         android:text="Preacher Curl"
         android:id="@+id/preacherCurlText"
         android:layout_gravity="center_horizontal"
-
         android:textColor="#ffffff"
         android:textSize="25dp"
             android:layout_below="@+id/hammerCurlDetail"
             android:layout_above="@+id/preacherCurlImage"
             android:layout_marginLeft="35dp"
             />
-        <TextView
-            android:layout_width="206dp"
-            android:layout_height="49dp"
-            android:text="4 Sets of 10-12 repititions  "
-            android:id="@+id/preacherCurlDetail"
-            android:layout_gravity="left|center_vertical"
 
-            android:textColor="#ffffff"
-            android:layout_below="@+id/preacherCurlImage"
-            android:layout_above="@+id/closegripPushupDetail"
-            android:layout_marginLeft="125dp"
-            />
+
+
     <ImageButton
         android:scaleType="fitXY"
         android:layout_width="wrap_content"
@@ -96,18 +90,19 @@
         android:layout_above="@+id/preacherCurlDetail"
         />
 
+        <TextView
+            android:layout_width="206dp"
+            android:layout_height="49dp"
+            android:text="4 Sets of 10-12 repititions  "
+            android:id="@+id/preacherCurlDetail"
+            android:layout_gravity="left|center_vertical"
+            android:textColor="#ffffff"
+            android:layout_below="@+id/preacherCurlImage"
+            android:layout_above="@+id/closegripPushupText"
+            android:layout_marginLeft="125dp"
+            />
 
 
-    <TextView
-        android:layout_width="177dp"
-        android:layout_height="58dp"
-        android:text="4 sets of 5-15 concentrated repetitions (Depending on skill level)"
-        android:id="@+id/closegripPushupDetail"
-        android:layout_gravity="left|bottom"
-        android:layout_marginBottom="90dp"
-        android:textColor="#ffffff"
-        android:layout_below="@+id/preacherCurlDetail"
-        android:layout_above="@+id/closegripPushupText"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -118,7 +113,7 @@
         android:layout_marginBottom="125dp"
         android:textColor="#ffffff"
         android:textSize="25dp"
-        android:layout_below="@+id/closegripPushupDetail"
+        android:layout_below="@+id/preacherCurlDetail"
         android:layout_above="@+id/closegrippushupImage"/>
 
     <ImageButton
@@ -131,9 +126,18 @@
         android:clickable="true"
         android:src="@drawable/closegrippushup"
         android:layout_below="@+id/closegripPushupText"
-
         />
 
+        <TextView
+            android:layout_width="177dp"
+            android:layout_height="58dp"
+            android:text="4 sets of 5-15 concentrated repetitions (Depending on skill level)"
+            android:id="@+id/closegripPushupDetail"
+            android:layout_gravity="left|bottom"
+            android:layout_marginBottom="90dp"
+            android:textColor="#ffffff"
+            android:layout_below="@+id/closeGripBenchImagel"
+            android:layout_above="@+id/completeDay3bb"/>
 
 
     <Button
