--- a/app/src/main/res/layout/fragment_body_building_day_five.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_five.xml
@@ -21,8 +21,8 @@
             android:id="@+id/bbDay5"
             android:layout_gravity="center_horizontal|top"
             android:textColor="#ffffff"
-
             />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -32,16 +32,10 @@
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/bbDay5"
             android:textColor="#ffffff"
-            android:textSize="32dp" />
+            android:textSize="32dp"
+            />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="4 Sets of 8-10 Repetitions. 1 minute rest between sets"
-            android:id="@+id/militaryPressDetail"
-            android:layout_below="@+id/militaryPressText"
-            android:layout_gravity="center_horizontal"
-            android:textColor="#ffffff" />
+
 
         <ImageButton
             android:scaleType="fitXY"
@@ -57,6 +51,16 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="4 Sets of 8-10 Repetitions. 1 minute rest between sets"
+            android:id="@+id/militaryPressDetail"
+            android:layout_below="@+id/militaryPressText"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#ffffff"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Side Lateral Raises"
             android:id="@+id/sideRaiseText"
             android:layout_below="@+id/militaryPressImage"
@@ -64,15 +68,6 @@
             android:textColor="#ffffff"
             android:textSize="32dp"
             />
-
-        <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="4 Sets of 12 very light weight repetitions. "
-        android:id="@+id/sideLatRaiseDetail"
-        android:layout_below="@+id/sideRaiseText"
-        android:layout_gravity="center_horizontal"
-        android:textColor="#ffffff" />
 
 
         <ImageButton
@@ -83,7 +78,18 @@
             android:layout_below="@+id/sideLatRaiseDetail"
             android:layout_gravity="center_horizontal"
             android:clickable="true"
-            android:src="@drawable/dumbbelllatraise" />
+            android:src="@drawable/dumbbelllatraise"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4 Sets of 12 very light weight repetitions. "
+            android:id="@+id/sideLatRaiseDetail"
+            android:layout_below="@+id/sideRaiseText"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#ffffff"
+            />
 
 
         <TextView
@@ -94,16 +100,10 @@
             android:layout_below="@+id/sideLatRaiseDetail"
             android:layout_gravity="center_horizontal"
             android:textColor="#ffffff"
-            android:textSize="32dp" />
+            android:textSize="32dp"
+            />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="4 sets of 10 repetitions."
-            android:id="@+id/shoulderPressDetail"
-            android:layout_below="@+id/sideLatRaiseDetail"
-            android:layout_gravity="center_horizontal"
-            android:textColor="#ffffff" />
+
 
         <ImageButton
             android:scaleType="fitXY"
@@ -113,7 +113,18 @@
             android:layout_below="@+id/shoulderPressDetail"
             android:layout_gravity="center_horizontal"
             android:clickable="true"
-            android:src="@drawable/shoulderpress" />
+            android:src="@drawable/shoulderpress"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4 sets of 10 repetitions."
+            android:id="@+id/shoulderPressDetail"
+            android:layout_below="@+id/sideLatRaiseDetail"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#ffffff"
+            />
 
         <Button
             android:layout_width="wrap_content"
@@ -122,14 +133,16 @@
             android:id="@+id/BBBack"
             android:layout_gravity="left|bottom"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Workout Complete!"
             android:id="@+id/completeDay5bb"
-            android:layout_gravity="right|bottom" />
+            android:layout_gravity="right|bottom"
+            />
 
 
     </LinearLayout>>
